--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -8,7 +8,8 @@
           <h4>Product Name</h4>
         </div>
         <div class="col-sm-8">
-          <%= f.text_field :title, class: "form-control", placeholder: "Enter the Name of the Product you wish to Buy", autofocus: true %>
+        <%= f.select(:title, ['Lisbon','Madrid']) %>
+         
         </div>
       </div>
       <div class="form-group">
