--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -3,7 +3,7 @@
     <div class="col-xs-8 col-xs-offset-2">
       <div class="well well-lg">
         <div class="article-title">
-          <%= link_to article.title, article_path(article) %>
+          <%= link_to article.title, user_article_path(current_user,article) %>
         </div>
         <div class="article-body">
           <p style="color:blue">Name Of The Product:&nbsp<%= truncate(article.description, length: 100) %><br/></p>
@@ -20,8 +20,8 @@
         <% end %>
         <% if logged_in? && (current_user == article.user || current_user.admin?) %>
           <div class="article-actions">
-            <%= link_to "Edit this Transaction", edit_article_path(article), class: "btn btn-xs btn-primary" %>
-            <%= link_to "Delete this Transaction", article_path(article), method: :delete, 
+            <%= link_to "Edit this Transaction", edit_user_article_path(current_user,article), class: "btn btn-xs btn-primary" %>
+            <%= link_to "Delete this Transaction", user_article_path(current_user,article), method: :delete, 
                                           data: { confirm: "Are you sure you want to delete the Transaction?"}, 
                                           class: "btn btn-xs btn-danger" %>  
           </div>
