--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -2,7 +2,7 @@
 
 <div class='row'>
   <div class='col-xs-12'>
-    <%= form_for(@article, :html => {class: "form-horizontal", role: "form"}) do |f| %>
+    <%= form_for(@article, url: user_articles_path(current_user), :html => {method: :post,class: "form-horizontal", role: "form"}) do |f| %>
       <div class="form-group">
         <div class="control-label col-sm-2">
           <h4>Product Name</h4>
@@ -44,7 +44,7 @@
       </div>
     <% end %>
     <div class="col-xs-4 col-xs-offset-4">
-      [ <%= link_to "Cancel request and return to Transaction listing", articles_path %> ]
+      [ <%= link_to "Cancel request and return to Transaction listing", user_articles_path(current_user) %> ]
     </div>
   </div>
 </div>
