--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -1,32 +1,33 @@
+
+
+
+
 <% obj.each do |article| %>
-  <div class="row">
-    <div class="col-xs-8 col-xs-offset-2">
-      <div class="well well-lg">
-        <div class="article-title">
+
+<table>
+ <tr>
+   
+    <td>
           <%= link_to article.title, article_path(article) %>
-        </div>
-        <div class="article-body">
-          <p style="color:blue">Name Of The Product:&nbsp<%= truncate(article.description, length: 100) %><br/></p>
-          <p style="float:left;color:red">Price:&nbsp<%= truncate(article.price, length: 100) %></p>
-           <br/>
-          <div class="article-meta-details">
-            <small>Created by: <%= article.user.username if article.user%>,
-                    <%= time_ago_in_words(article.created_at) %> ago,
-                    last updated: <%= time_ago_in_words(article.updated_at) %> ago</small>
-          </div>
-        </div>
-        <% if article.categories.any? %>
-          <p>Categories: <%= render article.categories %></p>
-        <% end %>
+     </td>  
+     <td> <%= article.description %></td>
+     <td> <%= article.price %></td>
+     <td>     Created by: <%= article.user.username if article.user%>,
+                      <%= time_ago_in_words(article.created_at) %> ago,
+                last updated: <%= time_ago_in_words(article.updated_at) %> ago</td>
+         
+       <td>       
         <% if logged_in? && (current_user == article.user || current_user.admin?) %>
-          <div class="article-actions">
-            <%= link_to "Edit this Transaction", edit_article_path(article), class: "btn btn-xs btn-primary" %>
+          
+             <%= link_to "Edit this Transaction", edit_article_path(article), class: "btn btn-xs btn-primary" %>
             <%= link_to "Delete this Transaction", article_path(article), method: :delete, 
                                           data: { confirm: "Are you sure you want to delete the Transaction?"}, 
-                                          class: "btn btn-xs btn-danger" %>  
-          </div>
-        <% end %>
-      </div>
-    </div>
-  </div>
+                                          class: "btn btn-xs btn-danger" %> 
+
+          <% end %>
+         </td>
+          
+        
+</tr>
+</table>      
 <% end %>
