--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -3,9 +3,19 @@
 <div class='row'>
   <div class='col-xs-12'>
     <%= form_for(@article, :html => {class: "form-horizontal", role: "form"}) do |f| %>
+    <div class="form-group">
+        <div class="control-label col-sm-2">
+          <h4>Account Name</h4>
+        </div>
+        <div class="col-sm-8"><br/>
+               
+        <%= f.collection_select(:accountname, Account.all, :id, :name) %>
+          
+        </div>
+      </div>
       <div class="form-group">
         <div class="control-label col-sm-2">
-          <h4>Product Name</h4>
+          <h4>Title</h4>
         </div>
         <div class="col-sm-8">
           <%= f.text_field :title, class: "form-control", placeholder: "Enter the Name of the Product you wish to Buy", autofocus: true %>
@@ -38,7 +48,7 @@
       </div>
       <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
-          <%= f.submit 'Create Transaction', class: 'btn btn-primary btn-lg' %>
+          <%= f.submit 'ADD', class: 'btn btn-primary btn-lg' %>
         </div>
       </div>
     <% end %>
