--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,31 @@
-<h1 align="center">Listing all Transaction</h1>
+<h1 align="center">Search For Transaction</h1>
 <div align="center">
+<!-- Include jQuery -->
+
+<%= search_form_for @search do |f| %>
+          
+          
+           <div class="field">
+          
+           <%= f.label :title_cont, "Search By Title" %>
+           <%= f.text_field :title_cont%><br>
+           
+           <%= f.label :created_at_gteq, "Date From" %>
+           <%= f.text_field :created_at_gteq, class: "datepicker" %>
+           <span>To</span>
+           <%= f.text_field :created_at_lteq, class: "datepicker" %>
+           <%= f.label :created_at_gteq, "." %>
+			<script type="text/javascript">
+			  $(document).ready(function(){
+			    $('.datepicker').datepicker();
+			  });
+			</script>
+
+
+
+          </div>
+          <div class="actions"><%= f.submit "Search" %></div>
+<% end %>
   <%= will_paginate %>
 </div>
 <%= render 'article', obj: @articles %>
