--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -14,19 +14,26 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><%= link_to "Transaction", articles_path %></li>
+        <li><%= link_to "Search", articles_path %></li>
         <li><%= link_to "All User's Transaction", users_path %></li>
         <% if logged_in? %>  
           <li><%= link_to "Make New Transaction", new_article_path %></li>
         <% end %>
+        <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">  Account <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+            <% Account.all.each do |account| %>
+             <li> <%= link_to "#{account.name}",account_path(account) %></li>
+              <%end%> 
+              <li role="separator" class="divider"></li>
+              <li><%= link_to 'Add Account',new_account_path%></li>
+             
+            </ul>
+
+          </li>
         
       </ul>
-      <form class="navbar-form navbar-left" role="search">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
+      
       <ul class="nav navbar-nav navbar-right">
         <% if logged_in? %>
           <li><%= link_to 'Log out', logout_path, method: :delete %></li>
@@ -40,6 +47,7 @@
             </ul>
           </li>
         <% else %>
+        
           <li><%= link_to 'Log in', login_path %></li>
           <li><%= link_to 'Sign up', signup_path %></li>
         <% end %>
