--- a/app/views/accounts/new.html.erb
+++ b/app/views/accounts/new.html.erb
@@ -18,6 +18,6 @@
       </div>
     <% end %>
     <div class="col-xs-4 col-xs-offset-4">
-      [ <%= link_to "Cancel request and return to Transaction listing", articles_path %> ]
+      [ <%= link_to "Cancel request and return to Transaction listing", transactions_path %> ]
     </div>
  
