--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -14,10 +14,10 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><%= link_to "Search", articles_path %></li>
+        <li><%= link_to "Search", transactions_path %></li>
         <li><%= link_to "All User's Transaction", users_path %></li>
         <% if logged_in? %>  
-          <li><%= link_to "Make New Transaction", new_article_path %></li>
+          <li><%= link_to "Make New Transaction", new_transaction_path %></li>
         <% end %>
         <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">  Account <span class="caret"></span></a>
