--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,10 +6,10 @@
       <div class="row">
         <div class="well col-md-4 col-md-offset-4">
           <li><%= link_to gravatar_for(user), user_path(user) %></li>
-          <li class="article-title">
+          <li class="transaction-title">
             <%= link_to user.username, user_path(user) %>
           </li>
-          <li><small><%= pluralize(user.articles.count, "Transaction") if user.articles %></small></li>
+          <li><small><%= pluralize(user.transactions.count, "Transaction") if user.transactions %></small></li>
           <% if logged_in? and current_user.admin? %>
             <li><%= link_to "Delete this user", user_path(user), method: :delete,
                 data: { confirm: "Are you sure you want to delete the user and all their Transaction?" } %></li>
