--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -1,18 +1,7 @@
 <h1 align="center">Account Name</h1>
-<div align="center">
  <%= will_paginate %>
-<%= @accounts.each do |account|%>
-	<ul class="listing">
-	  <div class="row">
-	    <div class="well col-md-4 col-md-offset-4">
-	    	<li class="article-title">
-	    		<%= link_to "#{account.name}", account_path(account) %>
-	    	</li>
-	    </div>
-	  	
-	  </div>
-
-	</ul>
-	<%end%>
-	<%= will_paginate %>
-	</div>
+</div>
+<%= render 'acc', obj: @accounts %>
+<div align="center">
+  <%= will_paginate %>
+</div>
