--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -18,6 +18,7 @@
         <li><%= link_to "All User's Transaction", users_path %></li>
         <% if logged_in? %>  
           <li><%= link_to "Make New Transaction", new_transaction_path %></li>
+          <li><%= link_to "Edit Account", accounts_path %></li>
         <% end %>
         <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">  Account <span class="caret"></span></a>
