--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,19 +1,15 @@
-table, td, th {
-    border: 1px solid grey;
-}
-
-table {
-    border-collapse: collapse;
-    width: 100%;
+table, td {
+    border: 1px solid black;
     text-align:center;
-    vertical-align: bottom;
-    padding: 15px;
+    margin-left:70px;
+     
 }
-
 
 th {
-    height: 90px;
-}
+    white-space: nowrap;
+    border: 1px solid black;
+       
+    }
 
 
 $navbar-default-bg: black;
