--- a/app/views/transactions/_form.html.erb
+++ b/app/views/transactions/_form.html.erb
@@ -2,7 +2,7 @@
 
 <div class='row'>
   <div class='col-xs-12'>
-    <%= form_for(@transaction, :html => {class: "form-horizontal", role: "form"}) do |f| %>
+    <%= form_for(@transaction, :html => { multipart: true , class: "form-horizontal", role: "form"}) do |f| %>
     <div class="form-group">
         <div class="control-label col-sm-2">
           <h4>Account Name</h4>
@@ -13,6 +13,47 @@
           
         </div>
       </div>
+        <div class="form-group">
+          <div class="control-label col-sm-2">
+            <h4>Image Upload</h4>
+          </div>
+          <div class="col-sm-8">
+            <%= f.file_field :image %>
+          </div>
+        </div>
+        
+        <div class="form-group">
+          <div class="control-label col-sm-2">
+            <h4>File Upload</h4>
+          </div>
+          <div class="col-sm-8">
+            <%= f.file_field :document %>
+          </div>
+        </div>
+
+        
+
+        <% if logged_in? &&  current_user.admin?%>
+        <div class="form-group">
+        <div class="control-label col-sm-2">
+          <h4>Status</h4>
+        </div>
+        <div class="col-sm-8">
+          <%= f.select :status, ['Approve', 'Reject']%>
+        </div>
+      </div>
+
+       <div class="form-group">
+          <div class="control-label col-sm-2">
+            <h4>Approved BY</h4>
+          </div>
+          <div class="col-sm-8">
+               <%= f.text_field :approvedby,:value =>@current_user.username %>
+           </div>
+        </div>
+
+      <%  end %>
+
       <div class="form-group">
         <div class="control-label col-sm-2">
           <h4>Title</h4>
