--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -1,7 +1,7 @@
-<h1 align="center">Account Name</h1>
+<h1 align="center">Account Details</h1>
  <%= will_paginate %>
 </div>
-<%= render 'acc', obj: @accounts %>
+<%= render 'acco', obj: @accounts %>
 <div align="center">
   <%= will_paginate %>
 </div>
