--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -14,43 +14,44 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><%= link_to "Search", transactions_path %></li>
-        <li><%= link_to "All User's Transaction", users_path %></li>
+        <li><%= link_to "Search", transactions_path,{:style=>'color:#FFFFFF;'}%></li>
+        <li><%= link_to "All User's Transaction", users_path,{:style=>'color:#FFFFFF;'} %></li>
         <% if logged_in? %>  
-          <li><%= link_to "Make New Transaction", new_transaction_path %></li>
-          <li><%= link_to "Edit Account", accounts_path %></li>
-        <% end %>
-        <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">  Account <span class="caret"></span></a>
+          
+          <li><%= link_to "Make New Transaction", new_transaction_path,{:style=>'color:#FFFFFF;'} %></li>
+          <li><%= link_to "Edit Account", accounts_path,{:style=>'color:#FFFFFF;'} %></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" style="color:white">  Account <span class="caret"></span></a>
             <ul class="dropdown-menu">
             <% Account.all.each do |account| %>
              <li> <%= link_to "#{account.name}",account_path(account) %></li>
               <%end%> 
               <li role="separator" class="divider"></li>
               <li><%= link_to 'Add Account',new_account_path%></li>
+
              
             </ul>
 
           </li>
-        
-      </ul>
-      
-      <ul class="nav navbar-nav navbar-right">
-        <% if logged_in? %>
-          <li><%= link_to 'Log out', logout_path, method: :delete %></li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Your Profile <%= "Admin" if current_user.admin? %><span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><%= link_to "Edit your profile", edit_user_path(current_user) %></li>
-              <li><%= link_to "View your profile", user_path(current_user) %></li>
-              <li role="separator" class="divider"></li>
-              
-            </ul>
+          <li style="padding-top:15px;color:white"></li>
+        <% end %>
+     </ul>
+      <ul class="nav navbar-nav navbar-right ">  
+       <% if logged_in? %>
+        <li class="bigFont" style="color:#ffff99;margin-top:10px"><%= current_user.username%></li>
+        <li><%= link_to 'Log out',logout_path,{method: :delete,:style=>'color: white;'} %></li>
+        <li class="dropdown">
+          <a style="color:white" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Your Profile <%= "Admin" if current_user.admin? %><span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><%= link_to "Edit your profile", edit_user_path(current_user) %></li>
+            <li><%= link_to "View your profile", user_path(current_user) %></li>
+            <li role="separator" class="divider"></li>
+            
+          </ul>
           </li>
-        <% else %>
-        
-          <li><%= link_to 'Log in', login_path %></li>
-          <li><%= link_to 'Sign up', signup_path %></li>
+        <% else %>        
+          <li><%= link_to 'Log in' ,login_path,{:style=>'color:#FFFFFF;'}%></li>
+          <li><%= link_to 'Sign up',signup_path,{:style=>'color:#FFFFFF;'} %></li>
         <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
