--- a/app/views/transactions/_form.html.erb
+++ b/app/views/transactions/_form.html.erb
@@ -1,5 +1,4 @@
 <%= render 'shared/errors', obj: @transaction %>
-
 <div class='row'>
   <div class='col-xs-12'>
     <%= form_for(@transaction, :html => { multipart: true , class: "form-horizontal", role: "form"}) do |f| %>
@@ -7,10 +6,8 @@
         <div class="control-label col-sm-2">
           <h4>Account Name</h4>
         </div>
-        <div class="col-sm-8"><br/>
-               
-        <%= f.collection_select(:accountname, Account.all, :id, :name) %>
-          
+        <div class="col-sm-8"><br/>               
+        <%= f.collection_select(:accountname, Account.all, :id, :name) %>          
         </div>
       </div>
         <div class="form-group">
@@ -29,28 +26,26 @@
           <div class="col-sm-8">
             <%= f.file_field :document %>
           </div>
-        </div>
-
-        
+        </div>      
 
         <% if logged_in? &&  current_user.admin?%>
         <div class="form-group">
-        <div class="control-label col-sm-2">
+         <div class="control-label col-sm-2">
           <h4>Status</h4>
-        </div>
-        <div class="col-sm-8">
+         </div>
+         <div class="col-sm-8">
           <%= f.select :status, ['Approve', 'Reject']%>
-        </div>
-      </div>
+         </div>
+       </div>
 
        <div class="form-group">
-          <div class="control-label col-sm-2">
-            <h4>Approved BY</h4>
-          </div>
-          <div class="col-sm-8">
-               <%= f.text_field :approvedby,:value =>@current_user.username %>
-           </div>
+        <div class="control-label col-sm-2">
         </div>
+        <div class="col-sm-8">
+             <%= f.hidden_field :approve,:value =>@current_user.username %>
+             <%= f.hidden_field :approved_by, :value => @current_user.id %>
+        </div>
+       </div>
 
       <%  end %>
 
@@ -81,7 +76,7 @@
      
       <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
-          <%= f.submit 'ADD', class: 'btn btn-primary btn-lg' %>
+          <%= f.submit(@transaction.new_record? ? "ADD": "Update", class: 'btn btn-primary btn-lg') %>
         </div>
       </div>
     <% end %>
