--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -1,34 +1,25 @@
 <h1 align="center">Search For Transaction</h1>
 <div align="center">
-<!-- Include jQuery -->
-
-<%= search_form_for @search do |f| %>
-          
-          
-           <div class="field">
-          
-           <%= f.label :title_cont, "Search By Title" %>
-           <%= f.text_field :title_cont%><br>
-           
-           <%= f.label :created_at_gteq, "Date From" %>
-           <%= f.text_field :created_at_gteq, class: "datepicker" %>
-           <span>To</span>
-           <%= f.text_field :created_at_lteq, class: "datepicker" %>
-           <%= f.label :created_at_gteq, "." %>
-			<script type="text/javascript">
-			  $(document).ready(function(){
-			    $('.datepicker').datepicker();
-			  });
-			</script>
-
-
-
-          </div>
-          <div class="actions"><%= f.submit "Search" %></div>
-<% end %>
+  <%= search_form_for @search do |f| %>        
+     <div class="field">
+         <%= f.label :title_cont, "Search By Title" %>
+         <%= f.text_field :title_cont%><br>     
+         <%= f.label :created_at_gteq, "Date From" %>
+         <%= f.text_field :created_at_gteq, class: "datepicker" %>
+         <span>To</span>
+         <%= f.text_field :created_at_lteq, class: "datepicker" %>
+         <%= f.label :created_at_gteq, "." %>
+        <script type="text/javascript">
+          $(document).ready(function(){
+          $('.datepicker').datepicker();
+          });
+        </script>
+    </div>
+   <div class="actions"><%= f.submit "Search" %></div>
+  <% end %>
   <%= will_paginate %>
 </div>
-<%= render 'transaction', obj: @transactions %>
+<%= render 'transactions', obj: @transactions %>
 <div align="center">
   <%= will_paginate %>
 </div>
