--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -13,6 +13,14 @@
       </div>
       <div class="form-group">
         <div class="control-label col-sm-2">
+          <%= f.label :name %>
+        </div>
+        <div class="col-sm-8">
+          <%= f.text_field :name, class: "form-control", placeholder: "Enter name", autofocus: true %>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="control-label col-sm-2">
           <%= f.label :email %>
         </div>
         <div class="col-sm-8">
