--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -19,7 +19,8 @@
   <% end %>
   <%= will_paginate %>
 </div>
-<%= render 'transactions', obj: @transactions %>
+<%= react_component('TodoList',{transaction: @transactions})%>
 <div align="center">
   <%= will_paginate %>
 </div>
+
